# nexus-backend

./: .gitignore  pyproject.toml
docs/: dialogue-best-practices.md
nexus/: __init__.py  api_decorators.py  auth.py  auth_models.py  auth_route_types.py  auth_routes.py  circuit_breaker.py  config.py  context.py  cost_guard.py  database.py  deep_research.py  dialogue_history.py  errors.py  fastapi_setup.py  infra.py  ironman.py  lion.py  llm.py  llm_cache.py  llm_config.py  llm_metrics.py  llm_rate_limiter.py  llm_utils.py  logging.py  middleware.py  middleware_auth.py  middleware_base.py  middleware_exception.py  notify.py  rate_limit.py  repository.py  resilient_llm.py  response.py  scheduler.py  service.py  sse_manager.py  streaming.py  uc_sdk_helper.py  utils.py  (+1 more)
nexus/channels/: __init__.py  base.py  dispatcher.py  webhook.py
